Fix checkbox alignment

--- a/app/assets/stylesheets/base.css.scss
+++ b/app/assets/stylesheets/base.css.scss
@@ -183,6 +183,10 @@ hr.section-divider {
   font-size: 1.5em;
 }
 
+.modal .form-check-input {
+  margin-top: 0.5em;
+}
+
 @media (max-width: 576px) {
   .modal-dialog {
     margin: 0;
